[Lokesh]Added:swapping ui notes CRUD opeartions testing
